--- a/quizzes/side-table.html
+++ b/quizzes/side-table.html
@@ -1,4 +1,24 @@
-<table border="1" width="100%">
-    <caption>SideWays Table. </caption>
+<!DOCTYPE html>
+<html>
+<body>
+    <table border="1">
+        <caption>SideWays Table. </caption>
+        <tr>
+            <th>ID</th>
+            <td>928282134</td>
+            <td>29828812</td>
+        </tr>
+        <tr>
+            <th>Name</th>
+            <td>Joio Pal</td>
+            <td>Hal Abel</td>
+        </tr>
+        <tr>
+            <th>Course</th>
+            <td>CSE 316</td>
+            <td>CSE 101</td>
+        </tr>
 
-</table>
+    </table>
+</body>
+</html>
